--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-:root {
-    --cor-de-fundo: #1E1E1E;
-    --verde: #6FFF57;
+:root{
+    --cor-de-fundo: #1e1e1e;
+    --verde: #6fff57;
     --branco: #FFFFFF;
-    --botao-ativo: #3A375E;
+    --botao-ativo: #3a375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgba(58, 55, 94, 0.3);
 }
 
-body {
+body{
     background-color: var(--cor-de-fundo);
     color: var(--branco);
     font-family: 'Chakra Petch', sans-serif;
 }
-
 
 .conteudo-principal {
     display: flex;
@@ -36,9 +35,8 @@ body {
     color: var(--verde);
 }
 
-
 .botao {
-    font-family: 'Chakra Petch', sans-serif;
+    font-family: "Crakra Petch", sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -71,23 +69,42 @@ body {
     padding: 40px;
     border-radius: 0 0 40px 40px;
 }
+
 .aba-conteudo.ativo{
-    display:block;
+    display:block;   
 }
 
 .aba-conteudo{
     display: none;
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
 }
 
-.aba-conteudo-titulo-principal{
-    font-size: 28px;
+.contador{
+    font-size: 20px;
     text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .botoes {
+        display: flex;
+    }
+
+    .botao:first-child {
+        border-radius: 40px 0 0 0;
+    }
+
+    .botao:last-child {
+        border-radius: 0 40px 0 0;
+    }
 }
 .aba-conteudo-titulo-secundario{
     text-align: center;
     color: var(--verde);
     text-transform: uppercase;
 }
+
 .contador{
     font-size: 20px;
     text-align: center;
