--- a/style.css
+++ b/style.css
@@ -1,125 +1,115 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
-:root{
-    --cor-de-fundo: #1e1e1e;
-    --verde: #6fff57;
-    --branco: #FFFFFF;
-    --botao-ativo: #3a375E;
-    --botao-inativo: rgba(58, 55, 94, 0.5);
-    --texto-fundo: rgba(58, 55, 94, 0.3);
+
+
+
+/*O código abaixo indica as cores que iremos utilizar no projeto
+Para isso:
+Entre no seguinte endereço https://colorhunt.co/
+Procure uma paleta de seu agrado e digite os códigos hexadecimais das cores.
+*/
+:root {
+    --bg-color: #222831;
+    --primary-color: #DDDDDD;
+    --secondary-color: #F05454;
+    --font: "Nunito Sans", sans-serif;
+}
+/*Agora vamos estilizar o body
+*/
+body {
+    /*Esse comando vai mudar a cor de fundo */
+    background-color: var(--bg-color);
+    /*IMPORTANTE: ACRESCENTAR NO HTML APÓS A LINHA TITLE, ACRESCENTAR O COMANDO QUE VAI CHAMAR O CSS
+    <link rel="stylesheet" href="style.css"> */
+    /*O comando abaixo indicará a cor de texto a ser usado no projeto*/
+    color: var(--primary-color);
+    /*O comando abaixo indicará a fonte a ser usado no projeto*/
+    font: var(--font);
+    /*Para usar toda a disposição da tela que temos*/
+    height: 100vh;
+    /*Para deixar sem margem*/
+    margin: 0;
+}
+/*Agora vamos estilizar o header*/
+header {
+   /*Esse comando vai mudar a cor de fundo */
+   background-color: var(--primary-color);
+   /*Para alinhar o texto ao centro*/
+   text-align: center;
+    /*Para o background ocupar todo o espaço da tela*/
+    padding: 1px;
+}
+/*Agora vamos estilizar o h1, que está dentro do header*/
+h1 {
+   /*tamanho da fonte*/
+   font-size: 2 rem;
+   /*cor da letra*/
+   color: var(--bg-color);
+   /*Peso da fonte*/
+   font-weight: 700;
+}
+/*Agora vamos estilizar o Nav*/
+nav {
+   /*Posicionamento dos elementos*/
+   display: flex;
+   /*Alinhando os elementos*/
+   justify-content: center;
+   /*Peso da fonte*/
+   font-weight: 400;
+}
+nav a {
+   /*Texto simples, sem sublinhado negrito etc*/
+   text-decoration: none;
+   color: var(--bg-color);
+   /*Margem superior, esquerda, direita, inferior, entre os elementos nesta ordem*/
+   margin: 0 2rem 1rem 0rem;
+   font-size: 1.2rem;
+}
+/*Para sabaer que se trata de um link, quando passar o mouse algo muda*/
+nav a:hover {
+   /*aparece o underline*/
+   text-decoration: underline;
+   /*aumenta um pouco o tamanho da letra*/
+   transform: escale(0.90);
+   /*altera a velocidade*/
+   transition: transform 0.1s;
 }
 
-body{
-    background-color: var(--cor-de-fundo);
-    color: var(--branco);
-    font-family: 'Chakra Petch', sans-serif;
+
+
+
+.graficos-container {
+   margin: 5rem;
 }
 
-.conteudo-principal {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
+
+
+
+.graficos-container__texto {
+   font-size: 1.3rem;
+   text-align: center;
+   padding: 2rem;
+   border: var(--secondary-color) solid 2px;
 }
 
-.titulo-principal {
-    text-align: left;
-    width: 100%;
-    font-size: 32px;
+
+
+
+span {
+   font-weight: bold;
+   color: var(--secondary-color);
 }
-
-.titulo-principal span {
-    color: var(--verde);
-}
-
-.botao {
-    font-family: "Crakra Petch", sans-serif;
-    background-color: var(--botao-inativo);
-    color: var(--branco);
-    display: flex;
-    justify-content: center;
-    padding: 1em;
-    font-size: 18px;
-    align-items: center;
-    width: 100%;
-    border-bottom: 4px solid var(--botao-ativo);
-    border-left: 2px solid var(--botao-ativo);
-    border-right: 2px solid var(--botao-ativo);
-    border-top: none;
-}
-
-.botao:first-child {
-    border-radius: 40px 40px 0 0;
-}
-
-.botoes {
-    display: block;
-}
-
-.botao.ativo{
-    background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--verde);
-}
-
-.abas-textos{
-    background-color: var(--texto-fundo);
-    padding: 40px;
-    border-radius: 0 0 40px 40px;
-}
-
-.aba-conteudo.ativo{
-    display:block;   
-}
-
-.aba-conteudo{
-    display: none;
-    text-align: center;
-    color: var(--verde);
-    text-transform: uppercase;
-}
-
-.contador{
-    font-size: 20px;
-    text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-    .botoes {
-        display: flex;
-    }
-
-    .botao:first-child {
-        border-radius: 40px 0 0 0;
-    }
-
-    .botao:last-child {
-        border-radius: 0 40px 0 0;
-    }
-}
-.aba-conteudo-titulo-secundario{
-    text-align: center;
-    color: var(--verde);
-    text-transform: uppercase;
-}
-
-.contador{
-    font-size: 20px;
-    text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-    .botoes {
-        display: flex;
-    }
-
-    .botao:first-child {
-        border-radius: 40px 0 0 0;
-    }
-
-    .botao:last-child {
-        border-radius: 0 40px 0 0;
-    }
+/*Agora vamos estilizar o Footer*/
+footer {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   background-color: var(--primary-color);
+   color: var(--bg-color);
+   /*largura*/
+   width: 100%;
+   /*altura*/
+   height: 3rem;
+   /*margem superior*/
+   margin-top: 2rem;
 }
